@@ -11,6 +11,7 @@
 - Fixed data corruption issues in ODBC and Oracle DB drivers
 - Additional internal server metrics for monitoring DB activity and performance
 - Added interface creation hook
+- Improved System.InstalledProducts table handling on Windows
 - Management console:
 	- Object tool input fields can be rearranged
 - Fixed issues: #205, #847, #948, #967, #979, #980, #991, #997, #1003
